--- a/vue-slider-markup-base/index.html
+++ b/vue-slider-markup-base/index.html
@@ -15,38 +15,23 @@
     <div id="app">
 
         <div class="container">
-            <div class="slider-wrapper" tabindex="0">
+            <div class="slider-wrapper" tabindex="0" @mouseout="startAutoPlay" @mouseover="stopInterval">
 
                 <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                    <img :src= "videoGames[indexImg].image" alt="videoGames[indexImg].title" />
                     <div class="text">
-                        <h3>Spiderman</h3>
+                        <h3>{{ videoGames[indexImg].title }}</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
+                            {{ videoGames[indexImg].text }}
                         </p>
                     </div>
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.webp" alt="Ratchet & Clank" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.webp" alt="Fortnite" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.webp" alt="Stray" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.webp" alt="Avengers" />
+                    <div class="prev" @click= "showPrevImg"></div>
+                    <div class="next" @click= "showNextImg"></div>
+                    <div class="thumb" :class="index === indexImg ? 'active' : ''" v-for="(image, index) in videoGames" @click="showImageIndex(index)">
+                        <img :src="videoGames[index].image" alt="Svezia"/>
                     </div>
                 </div>
 
